feat(model): harden manifest artifact reads and verified companions
Reject symlinked or non-regular manifest artifacts and any path that
escapes the variant directory after real-path resolution. Manifest-backed
bundles now read item_embeddings.json from the verified snapshot instead
of a second unchecked filesystem read, so a stale flat-root file can never
be mixed into a checksummed generation.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>